Clone Zortea - Empresa finish

--- a/CloneZortea/empresa.html
+++ b/CloneZortea/empresa.html
@@ -24,9 +24,9 @@
     <title>Clone - Estrutural Zortea</title>
 </head>
 
-<body class="index">
+<body class="empresa">
 
-    <header>
+    <header class="capa_header">
         <div class="container_large">
             <div class="logo">
                 <img src="images/logo.png" alt="Logo">
@@ -49,93 +49,91 @@
     </header>
 
     <main class="main-content">
-        <section class="content_banner">
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/banner1.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="images/banner2.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="images/banner3.jpg" alt=""></div>
-                </div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </section><!-- content_banner -->
+
+        <section class="header_title">
+            <div class="container">
+                <h1>A EMPRESA</h1>
+            </div><!-- container -->
+        </section><!-- header_title -->
 
         <section class="content_1">
-            <h1>Nossas Obras</h1>
-            <p>Participamos de obras que aceleram o desenvolvimento do país
-                <br>
-                e contribuem para a modernização da indústria nacional.
-                <br>
-                A qualidade dos produtos é assegurada pelos testes e ensaios realizados em todas
-                <br>
-                as etapas de fabricação como solda, jateamento e pintura.
-            </p>
-        </section>
-
-        <section class="content_images">
             <div class="container">
-                <div class="owl-carousel owl-themes">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
-                    <img src="images/item1.jpg" alt="">
+                <div class="display">
+                    <div class="text">
+                        <p>Empresa certificada ISO 9001-2015 para Projetos, fabricação e montagem de estruturas
+                            metálicas, DNV GL - Business Assurance (www.dnvba.com).</p>
+                        <p>Atua em todo o território nacional e diversos países, na modernização do sistema armazenagem,
+                            movimentação, importação e exportação de granéis sólidos.</p>
+                        <p>Possui corpo técnico experiente composto por técnicos, engenheiros civis e engenheiros
+                            mecânicos desenvolvendo projetos, cálculos, detalhamentos nas mais diversas áreas da
+                            engenharia.</p>
+                        <p>A Equipe técnica utiliza-se dos mais modernos softwares de dimensionamento do mercado,
+                            seguindo as diversas normas NBR, ANSI e ASTM.</p>
+
+                        <div class="button">
+                            <a href="#">Conheça os projetos</a>
+                        </div>
+                    </div><!-- text -->
+                    <div class="image">
+                        <div class="owl-carousel">
+                            <img src="images/banner1.jpg" alt="">
+                            <img src="images/banner2.jpg" alt="">
+                            <img src="images/banner3.jpg" alt="">
+                        </div>
+                    </div><!-- image -->
                 </div>
             </div><!-- container -->
-        </section><!-- content_images -->
+        </section><!-- content_1 -->
 
-        <section class="content_about">
+        <section class="content_mvv">
             <div class="container">
-                <div class="sobre">
-                    <div class="image">
-                        <img src="images/sobre_nos.jpg" alt="Imagem sobre nós">
+                <div class="item">
+                    <h1>Missão</h1>
+
+                    <p>Atender o cliente, desenvolvendo soluções para seu empreendimento, com alta tecnologia,
+                        qualidade, segurança e sustentabilidade através do contínuo aprimoramento profissional.</p>
+                </div>
+
+                <div class="item">
+                    <h1>Visão</h1>
+
+                    <p>Ser reconhecida pela sua experiência em soluções diferenciadas, qualidade e agilidade no segmento
+                        de Estruturas Metálicas, atuando em obras portuárias, industriais e infraestrutura.</p>
+                </div>
+
+                <div class="item list">
+                    <h1>Valores</h1>
+
+                    <div class="list">
+                        <ul>
+                            <li>Ética</li>
+                            <li>transparência</li>
+                            <li>Respeito</li>
+                            <li>Capital humano</li>
+                            <li>Sustentabilidade</li>
+
+                        </ul>
+                        <ul>
+                            <li>Trabalho</li>
+                            <li>Conhecimento</li>
+                            <li>Qualidade</li>
+                            <li>Clientividade.</li>
+
+                        </ul>
                     </div>
-                    <div class="text">
-                        <h1>SOBRE NÓS</h1>
-                        <h3>CONHEÇA A ESTRUTURAL ZORTEA</h3>
-
-                        <div class="display">
-                            <div class="item">
-                                <p>Através das rígidas exigências ISO 9001, possui profissionais qualificados e
-                                    treinados que
-                                    garantem total confiabilidade e qualidade na fabricação e montagem de seus produtos.
-                                </p>
-                                <p>Possui um moderno parque fabril de estruturas metálicas</p>
-                            </div>
-                            <div class="item">
-                                <p>com capacidade produtiva de até 700ton mensais.</p>
-                                <p><b>Atua em todo o território nacional e diversos países, na modernização do sistema
-                                        de
-                                        armazenagem, movimentação, importação e exportação de granéis sólidos.</b></p>
-
-                                <div class="button">
-                                    <a href="#">Saiba mais</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- display -->
-                </div><!-- sobre -->
-                <div class="box">
-                    <a href="#">
-                        <img src="images/image_box.png" alt="">
-                        <h1>EMPRESA CERTIFICADA
-                            <br>
-                            ISO 9001-2015
-                        </h1>
-                        <h3>para projetos, fabricação
-                            <br>
-                            e montagem
-                            <br>
-                            de estruturas metálicas.
-                        </h3>
-                    </a>
-                </div><!-- box -->
+                </div>
             </div><!-- container -->
-        </section><!-- content_about -->
+        </section><!-- content_mvv -->
 
+        <section class="video">
+            <div class="container">
+                <div class="fundo"></div>
+                <iframe width="800" height="440" src="https://www.youtube.com/embed/-8_kpQB7uWs"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen=""></iframe>
+            </div><!-- container -->
+        </section><!-- video -->
 
     </main><!-- main-content -->
 
@@ -187,6 +185,25 @@
         </div><!-- container -->
     </footer>
 
+    <section class="mvv">
+        <div class="container">
+
+            <div class="display">
+                <div class="img">
+
+                </div>
+                <!--img-->
+
+                <div class="txt">
+
+                </div>
+                <!--txt-->
+            </div>
+            <!--display-->
+
+        </div>
+        <!--container-->
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -202,36 +219,14 @@
         jQuery('.owl-carousel').owlCarousel({
             loop: true,
             margin: 10,
-            nav: true,
             autoplay: true,
             paginationSpeed: 300,
             rewindSpeed: 400,
             autoplayTimeout: 4000,
             autoplayHoverPause: true,
             responsiveClass: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 4
-                }
-            }
+            items: 1
         })
-
-        var swiper = new Swiper(".mySwiper", {
-            loop: true,
-            autoplay: true,
-            autoplayTimeout: 4000,
-            autoplayHoverPause: true,
-            pagination: {
-                el: ".swiper-pagination",
-                dynamicBullets: true,
-            },
-        });
     </script>
 
 </body>
