Clone Zortea - Start Soluçoes

--- a/CloneZortea/solucoes.html
+++ b/CloneZortea/solucoes.html
@@ -24,7 +24,7 @@
     <title>Clone - Estrutural Zortea</title>
 </head>
 
-<body class="empresa">
+<body class="solucoes">
 
     <header class="capa_header">
         <div class="container_large">
@@ -35,8 +35,8 @@
                 <ul>
                     <li><a href="/CloneZortea/">Home</a></li>
                     <li><a href="empresa.html">A Empresa</a></li>
-                    <li><a href="obras.html">Obras</a></li>
-                    <li><a href="solucoes.html">Soluções</a></li>
+                    <li><a href="#">Obras</a></li>
+                    <li><a href="#">Soluções</a></li>
                     <li><a href="#">Clientes</a></li>
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Contato</a></li>
@@ -52,88 +52,68 @@
 
         <section class="header_title">
             <div class="container">
-                <h1>A EMPRESA</h1>
+                <h1>SOLUÇÕES</h1>
             </div><!-- container -->
         </section><!-- header_title -->
 
         <section class="content_1">
-            <div class="container">
+            <div class="container_small">
                 <div class="display">
-                    <div class="text">
-                        <p>Empresa certificada ISO 9001-2015 para Projetos, fabricação e montagem de estruturas
-                            metálicas, DNV GL - Business Assurance (www.dnvba.com).</p>
-                        <p>Atua em todo o território nacional e diversos países, na modernização do sistema armazenagem,
-                            movimentação, importação e exportação de granéis sólidos.</p>
-                        <p>Possui corpo técnico experiente composto por técnicos, engenheiros civis e engenheiros
-                            mecânicos desenvolvendo projetos, cálculos, detalhamentos nas mais diversas áreas da
-                            engenharia.</p>
-                        <p>A Equipe técnica utiliza-se dos mais modernos softwares de dimensionamento do mercado,
-                            seguindo as diversas normas NBR, ANSI e ASTM.</p>
+                    <div class="txt">
+                        <p>Através das rígidas exigências ISO9001, possui profissionais qualificados e treinados que
+                            garantem total confiabilidade e qualidade na fabricação e montagem de seus produtos.</p>
+                        <p> Possui um moderno parque fabril de estruturas metálicas com capacidade produtiva de até
+                            700ton mensais. A Qualidade de seu produto é assegurada através de testes e ensaios
+                            realizados em todas as etapas de fabricação como solda, jateamento e pintura.</p>
+                        <p>As montagens são acompanhadas por Engenheiros, que aliam a qualidade, segurança e
+                            produtividade, garantido ao cliente o cronograma da obra, a segurança no trabalho e a
+                            qualidade de seus serviços.</p>
+                    </div><!-- txt -->
+                    <div class="card">
+                        <h2>ESPECIALIDADES</h2>
 
-                        <div class="button">
-                            <a href="#">Conheça os projetos</a>
-                        </div>
-                    </div><!-- text -->
-                    <div class="image">
-                        <div class="owl-carousel">
-                            <img src="images/banner1.jpg" alt="">
-                            <img src="images/banner2.jpg" alt="">
-                            <img src="images/banner3.jpg" alt="">
-                        </div>
-                    </div><!-- image -->
-                </div>
+                        <ul>
+                            <li>Cobertura de Armazéns Graneleiros;</li>
+                            <li>Cobertura de Galpões Industriais;</li>
+                            <li>Moegas e Tulhas para açúcar e grãos;</li>
+                            <li>Torres Metálicas;</li>
+                            <li>Prédios industriais em estrutura metálica;</li>
+                            <li>Galerias e Passarelas Metálicas;</li>
+                            <li>Ponte Pênsil;</li>
+                            <li>Píer flutuante para carregamento de barcaças;</li>
+                        </ul>
+                    </div><!-- card -->
+                </div><!-- display -->
             </div><!-- container -->
         </section><!-- content_1 -->
 
-        <section class="content_mvv">
+        <section class="display_solucoes">
             <div class="container">
-                <div class="item">
-                    <h1>Missão</h1>
-
-                    <p>Atender o cliente, desenvolvendo soluções para seu empreendimento, com alta tecnologia,
-                        qualidade, segurança e sustentabilidade através do contínuo aprimoramento profissional.</p>
+                <div class="owl-carousel owl-themes">
+                    <img src="images/solucao1.jpg" alt="Imagem Solução 01">
+                    <img src="images/solucao2.jpg" alt="Imagem Solução 02">
+                    <img src="images/solucao2.jpg" alt="Imagem Solução 02">
+                    <img src="images/solucao1.jpg" alt="Imagem Solução 01">
                 </div>
+            </div><!-- container -->
+        </section><!-- display_solucoes -->
 
-                <div class="item">
-                    <h1>Visão</h1>
-
-                    <p>Ser reconhecida pela sua experiência em soluções diferenciadas, qualidade e agilidade no segmento
-                        de Estruturas Metálicas, atuando em obras portuárias, industriais e infraestrutura.</p>
-                </div>
-
-                <div class="item list">
-                    <h1>Valores</h1>
-
-                    <div class="list">
-                        <ul>
-                            <li>Ética</li>
-                            <li>transparência</li>
-                            <li>Respeito</li>
-                            <li>Capital humano</li>
-                            <li>Sustentabilidade</li>
-
-                        </ul>
-                        <ul>
-                            <li>Trabalho</li>
-                            <li>Conhecimento</li>
-                            <li>Qualidade</li>
-                            <li>Clientividade.</li>
-
-                        </ul>
+        <section class="content_2">
+            <div class="container">
+                <div class="display">
+                    <div class="img-slider">
+                        <img src="images/item1.jpg" alt="Imagem Solução 01">
+                        <img src="images/item1.jpg" alt="Imagem Solução 01">
+                        <img src="images/item1.jpg" alt="Imagem Solução 01">
+                        <img src="images/item1.jpg" alt="Imagem Solução 01">
+                        <img src="images/item1.jpg" alt="Imagem Solução 01">
                     </div>
-                </div>
+                    <div class="txt">
+                        <h2>SISTEMA DE CARREGAMENTO E DESCARREGAMENTO DE BARCAÇAS (PÍER FLUTUANTE)</h2>
+                    </div>
+                </div><!-- display -->
             </div><!-- container -->
-        </section><!-- content_mvv -->
-
-        <section class="video">
-            <div class="container">
-                <div class="fundo"></div>
-                <iframe width="800" height="440" src="https://www.youtube.com/embed/-8_kpQB7uWs"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen=""></iframe>
-            </div><!-- container -->
-        </section><!-- video -->
+        </section><!-- content_2 -->
 
     </main><!-- main-content -->
 
@@ -146,8 +126,8 @@
                     <ul>
                         <li><a href="/CloneZortea/">Home</a></li>
                         <li><a href="empresa.html">A Empresa</a></li>
-                        <li><a href="#">Obras</a></li>
-                        <li><a href="#">Soluções</a></li>
+                        <li><a href="obras.html">Obras</a></li>
+                        <li><a href="solucoes.html">Soluções</a></li>
                         <li><a href="#">Clientes</a></li>
                         <li><a href="#">Notícias</a></li>
                         <li><a href="#">Contato</a></li>
@@ -185,25 +165,6 @@
         </div><!-- container -->
     </footer>
 
-    <section class="mvv">
-        <div class="container">
-
-            <div class="display">
-                <div class="img">
-
-                </div>
-                <!--img-->
-
-                <div class="txt">
-
-                </div>
-                <!--txt-->
-            </div>
-            <!--display-->
-
-        </div>
-        <!--container-->
-    </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -218,15 +179,48 @@
     <script type="text/javascript">
         jQuery('.owl-carousel').owlCarousel({
             loop: true,
-            margin: 10,
+            margin: 20,
+            nav: true,
             autoplay: true,
             paginationSpeed: 300,
             rewindSpeed: 400,
             autoplayTimeout: 4000,
             autoplayHoverPause: true,
             responsiveClass: true,
-            items: 1
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 2
+                },
+                1000: {
+                    items: 3
+                }
+            }
         })
+
+        /* jQuery('.img-slider').owlCarousel({
+            loop: true,
+            nav: true,
+            autoplay: true,
+            paginationSpeed: 300,
+            rewindSpeed: 400,
+            autoplayTimeout: 4000,
+            autoplayHoverPause: true,
+            items: 1
+        }) */
+
+        /*  var swiper = new Swiper(".mySwiper", {
+             loop: true,
+             autoplay: true,
+             autoplayTimeout: 4000,
+             autoplayHoverPause: true,
+             pagination: {
+                 el: ".swiper-pagination",
+                 dynamicBullets: true,
+             },
+         }); */
     </script>
 
 </body>
