--- a/CloneZortea/obras.html
+++ b/CloneZortea/obras.html
@@ -24,7 +24,7 @@
     <title>Clone - Estrutural Zortea</title>
 </head>
 
-<body class="empresa">
+<body>
 
     <header class="capa_header">
         <div class="container_large">
@@ -49,91 +49,47 @@
     </header>
 
     <main class="main-content">
-
+        
         <section class="header_title">
             <div class="container">
-                <h1>A EMPRESA</h1>
+                <h1>OBRAS</h1>
             </div><!-- container -->
         </section><!-- header_title -->
 
-        <section class="content_1">
+        <section class="obras">
             <div class="container">
                 <div class="display">
-                    <div class="text">
-                        <p>Empresa certificada ISO 9001-2015 para Projetos, fabricação e montagem de estruturas
-                            metálicas, DNV GL - Business Assurance (www.dnvba.com).</p>
-                        <p>Atua em todo o território nacional e diversos países, na modernização do sistema armazenagem,
-                            movimentação, importação e exportação de granéis sólidos.</p>
-                        <p>Possui corpo técnico experiente composto por técnicos, engenheiros civis e engenheiros
-                            mecânicos desenvolvendo projetos, cálculos, detalhamentos nas mais diversas áreas da
-                            engenharia.</p>
-                        <p>A Equipe técnica utiliza-se dos mais modernos softwares de dimensionamento do mercado,
-                            seguindo as diversas normas NBR, ANSI e ASTM.</p>
-
-                        <div class="button">
-                            <a href="#">Conheça os projetos</a>
-                        </div>
-                    </div><!-- text -->
-                    <div class="image">
-                        <div class="owl-carousel">
-                            <img src="images/banner1.jpg" alt="">
-                            <img src="images/banner2.jpg" alt="">
-                            <img src="images/banner3.jpg" alt="">
-                        </div>
-                    </div><!-- image -->
-                </div>
-            </div><!-- container -->
-        </section><!-- content_1 -->
-
-        <section class="content_mvv">
-            <div class="container">
-                <div class="item">
-                    <h1>Missão</h1>
-
-                    <p>Atender o cliente, desenvolvendo soluções para seu empreendimento, com alta tecnologia,
-                        qualidade, segurança e sustentabilidade através do contínuo aprimoramento profissional.</p>
-                </div>
-
-                <div class="item">
-                    <h1>Visão</h1>
-
-                    <p>Ser reconhecida pela sua experiência em soluções diferenciadas, qualidade e agilidade no segmento
-                        de Estruturas Metálicas, atuando em obras portuárias, industriais e infraestrutura.</p>
-                </div>
-
-                <div class="item list">
-                    <h1>Valores</h1>
-
-                    <div class="list">
-                        <ul>
-                            <li>Ética</li>
-                            <li>transparência</li>
-                            <li>Respeito</li>
-                            <li>Capital humano</li>
-                            <li>Sustentabilidade</li>
-
-                        </ul>
-                        <ul>
-                            <li>Trabalho</li>
-                            <li>Conhecimento</li>
-                            <li>Qualidade</li>
-                            <li>Clientividade.</li>
-
-                        </ul>
+                    <div class="item">
+                        <img src="images/item1.jpg" alt="">
+                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
+                        <p>Minas Gerais | Santa Juliana</p>
+                        <span>Código: 482</span>
                     </div>
-                </div>
-            </div><!-- container -->
-        </section><!-- content_mvv -->
 
-        <section class="video">
-            <div class="container">
-                <div class="fundo"></div>
-                <iframe width="800" height="440" src="https://www.youtube.com/embed/-8_kpQB7uWs"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen=""></iframe>
+                    <div class="item">
+                        <img src="images/item1.jpg" alt="">
+                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
+                        <p>Minas Gerais | Santa Juliana</p>
+                        <span>Código: 482</span>
+                    </div>
+
+                    <div class="item">
+                        <img src="images/item1.jpg" alt="">
+                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
+                        <p>Minas Gerais | Santa Juliana</p>
+                        <span>Código: 482</span>
+                    </div>
+
+                    <div class="item">
+                        <img src="images/item1.jpg" alt="">
+                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
+                        <p>Minas Gerais | Santa Juliana</p>
+                        <span>Código: 482</span>
+                    </div>
+                </div><!-- display -->
             </div><!-- container -->
-        </section><!-- video -->
+        </section>
+
 
     </main><!-- main-content -->
 
@@ -146,7 +102,7 @@
                     <ul>
                         <li><a href="/CloneZortea/">Home</a></li>
                         <li><a href="empresa.html">A Empresa</a></li>
-                        <li><a href="#">Obras</a></li>
+                        <li><a href="obras.html">Obras</a></li>
                         <li><a href="#">Soluções</a></li>
                         <li><a href="#">Clientes</a></li>
                         <li><a href="#">Notícias</a></li>
@@ -185,25 +141,6 @@
         </div><!-- container -->
     </footer>
 
-    <section class="mvv">
-        <div class="container">
-
-            <div class="display">
-                <div class="img">
-
-                </div>
-                <!--img-->
-
-                <div class="txt">
-
-                </div>
-                <!--txt-->
-            </div>
-            <!--display-->
-
-        </div>
-        <!--container-->
-    </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -216,17 +153,39 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <script type="text/javascript">
-        jQuery('.owl-carousel').owlCarousel({
+        /* jQuery('.owl-carousel').owlCarousel({
             loop: true,
             margin: 10,
+            nav: true,
             autoplay: true,
             paginationSpeed: 300,
             rewindSpeed: 400,
             autoplayTimeout: 4000,
             autoplayHoverPause: true,
             responsiveClass: true,
-            items: 1
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 2
+                },
+                1000: {
+                    items: 4
+                }
+            }
         })
+ */
+       /*  var swiper = new Swiper(".mySwiper", {
+            loop: true,
+            autoplay: true,
+            autoplayTimeout: 4000,
+            autoplayHoverPause: true,
+            pagination: {
+                el: ".swiper-pagination",
+                dynamicBullets: true,
+            },
+        }); */
     </script>
 
 </body>
