Clone Zortea - Created Page Clientes

--- a/CloneZortea/empresa.html
+++ b/CloneZortea/empresa.html
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main_content">
 
         <section class="header_title">
             <div class="container">
