--- a/CloneZortea/solucoes.html
+++ b/CloneZortea/solucoes.html
@@ -37,7 +37,7 @@
                     <li><a href="empresa.html">A Empresa</a></li>
                     <li><a href="obras.html">Obras</a></li>
                     <li><a href="solucoes.html">Soluções</a></li>
-                    <li><a href="#">Clientes</a></li>
+                    <li><a href="clientes.html">Clientes</a></li>
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main_content">
 
         <section class="header_title">
             <div class="container">
