--- a/CloneZortea/clientes.html
+++ b/CloneZortea/clientes.html
@@ -24,7 +24,7 @@
     <title>Clone - Estrutural Zortea</title>
 </head>
 
-<body>
+<body class="clientes">
 
     <header class="capa_header">
         <div class="container_large">
@@ -37,7 +37,7 @@
                     <li><a href="empresa.html">A Empresa</a></li>
                     <li><a href="obras.html">Obras</a></li>
                     <li><a href="solucoes.html">Soluções</a></li>
-                    <li><a href="#">Clientes</a></li>
+                    <li><a href="clientes.html">Clientes</a></li>
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
@@ -49,47 +49,33 @@
     </header>
 
     <main class="main_content">
-        
+
         <section class="header_title">
             <div class="container">
-                <h1>OBRAS</h1>
+                <h1>NOSSOS CLIENTES</h1>
             </div><!-- container -->
         </section><!-- header_title -->
 
-        <section class="obras">
+        <section class="subTitle">
+            <div class="container">
+                <p>Conheça as empresas que confiam no nosso trabalho.</p>
+            </div><!-- container -->
+        </section><!-- subTitle -->
+
+        <section class="logos">
             <div class="container">
                 <div class="display">
-                    <div class="item">
-                        <img src="images/item1.jpg" alt="">
-                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
-                        <p>Minas Gerais | Santa Juliana</p>
-                        <span>Código: 482</span>
-                    </div>
-
-                    <div class="item">
-                        <img src="images/item1.jpg" alt="">
-                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
-                        <p>Minas Gerais | Santa Juliana</p>
-                        <span>Código: 482</span>
-                    </div>
-
-                    <div class="item">
-                        <img src="images/item1.jpg" alt="">
-                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
-                        <p>Minas Gerais | Santa Juliana</p>
-                        <span>Código: 482</span>
-                    </div>
-
-                    <div class="item">
-                        <img src="images/item1.jpg" alt="">
-                        <h3>Tulhas Ferroviárias - Bunge Alimentos</h3>
-                        <p>Minas Gerais | Santa Juliana</p>
-                        <span>Código: 482</span>
-                    </div>
+                    <img src="images/clientes/adm.jpg" alt="">
+                    <img src="images/clientes/agtl.jpg" alt="">
+                    <img src="images/clientes/all.jpg" alt="">
+                    <img src="images/clientes/adm.jpg" alt="">
+                    <img src="images/clientes/agtl.jpg" alt="">
+                    <img src="images/clientes/all.jpg" alt="">
+                    <img src="images/clientes/amaggi.jpg" alt="">
+                    <img src="images/clientes/amaggi.jpg" alt="">
                 </div><!-- display -->
             </div><!-- container -->
-        </section>
-
+        </section><!-- logos -->
 
     </main><!-- main-content -->
 
@@ -103,8 +89,8 @@
                         <li><a href="/CloneZortea/">Home</a></li>
                         <li><a href="empresa.html">A Empresa</a></li>
                         <li><a href="obras.html">Obras</a></li>
-                        <li><a href="#">Soluções</a></li>
-                        <li><a href="#">Clientes</a></li>
+                        <li><a href="solucoes.html">Soluções</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
                         <li><a href="#">Notícias</a></li>
                         <li><a href="#">Contato</a></li>
                     </ul>
@@ -155,7 +141,7 @@
     <script type="text/javascript">
         /* jQuery('.owl-carousel').owlCarousel({
             loop: true,
-            margin: 10,
+            margin: 20,
             nav: true,
             autoplay: true,
             paginationSpeed: 300,
@@ -171,21 +157,21 @@
                     items: 2
                 },
                 1000: {
-                    items: 4
+                    items: 3
                 }
             }
-        })
- */
-       /*  var swiper = new Swiper(".mySwiper", {
-            loop: true,
-            autoplay: true,
-            autoplayTimeout: 4000,
-            autoplayHoverPause: true,
-            pagination: {
-                el: ".swiper-pagination",
-                dynamicBullets: true,
-            },
-        }); */
+        }) */
+
+        /* var swiper = new Swiper(".mySwiper", {
+             loop: true,
+             autoplay: true,
+             autoplayTimeout: 4000,
+             autoplayHoverPause: true,
+             pagination: {
+                 el: ".swiper-pagination",
+                 dynamicBullets: true,
+             },
+         }); */
     </script>
 
 </body>
