--- a/CloneZortea/index.html
+++ b/CloneZortea/index.html
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main_content">
         <section class="content_banner">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
